# FAST-PEDAGO

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_release.yml
MDA_Part/: FAST_OAD_app-0.ipynb  FAST_OAD_app.ipynb  Interface.py  Notebook1.ipynb  OAD.py  buttons.py
MDA_Part/Base files/: Basic_ref_out.xml  CeRAS01_baseline.xml  IncrementalDevelopment_Aircraft_File.xml  Output4.xml  Output_22000_180.xml  Output_4000.xml  aaaaaaaaaaaaa.xml  inputFAST.xml  out2.xml  out2_opt.xml  prova1out.xml  prova2out.xml
MDA_Part/CSMworkdir/: A220_output.xml  CeRAS_ref_out_1.xml  Output_1500.xml  STEP2_AC.xml  STEP3_AC.xml  Updated_CsmBaseModel.csm  a2.xml  asdadaaaqf.xml  esp_logs.txt  full_model.stp  fuselage.stp  htp.stp  out1opt.xml  out3.xml  out_Tail.xml  port7681.jrnl  prova3out.xml  prova4out.xml  vtp.stp  wing_only.stp
MDA_Part/Final python and .csm files/: Main.ipynb  read-file.ipynb
MDA_Part/INPUT_FILE/: A220family_input.xml  ACref_input.xml  CeRAS_Fus1_Mach076.xml  CeRAS_ref_input.xml  CeRAS_ref_input_Fuselagek1.xml  INPUT6.xml  Input_1500.xml  Input_2000.xml  Input_2500.xml  Input_4000.xml  fnfdjf.xml  out2.xml  out3.xml
MDA_Part/Interface/: Tuto.ipynb  m1.py  mda_gui.py
MDA_Part/MISSION_FILE/: AB.csv  ACref_output.csv  AIR.csv  AIR1.csv  CeRAS_FusK1_Mach077.csv  CeRAS_Fusk1_Mach076.csv  CeRAS_ref_out_1.csv  DESIGN_2.csv  OP_DESIGN.csv  Output4.csv  out1.csv  out2.csv  out3.csv
MDA_Part/Module/: Conf.py  Configuration_ui.py  Interface.py  MDA.py  OAD.py  menu_gui.py
MDA_Part/OUTPUT_EXO/: AR.csv  AR.xml  AR12.xml  AR15.xml  AR18.xml  AR21.xml  AR3.xml  AR5.csv  AR5.xml  Ar13.csv  Ar13.xml  Range1500.xml
MDA_Part/OUTPUT_FILE/: AB.xml  AIR1.xml  AIRCRAFT_1.xml  CeRAS_ref_out.xml  CeRAS_ref_out_Test_FuselageK1.xml  DESIGN_2.xml  ID_Aircraft_File.xml  IncrementalDevelopment_Aircraft_File.xml  OP_DESIGN.xml  STEP2_OWE.xml  out3.xml
MDA_Part/Table/: MTOW_des.csv  MTOW_name.csv  MTOW_unit.csv  Size_des.csv  TLARS_name.csv  TLARS_unit.csv  We_unit.csv  aero_name.csv  aero_unit.csv  cab_des.csv  cab_unit.csv  cruise_des.csv  cruise_name.csv  flap_des.csv  flap_name.csv  ht_name.csv  ht_unit.csv  land_des.csv  land_name.csv  land_units.csv  load_unit.csv  opm_des.csv  opm_name.csv  pro_unit.csv  prop_des.csv  slat_des.csv  slat_name.csv  vt_des.csv  vt_name.csv  (+1 more)
Presentation/: Tuto-Copy1.ipynb  Tuto.ipynb  essai.ipynb  full.ipynb  record.sqlite  recorder.ipynb
binder/: requirements.txt
fast_pedago/: FAST_OAD_app.ipynb  Interface.py  app.py  interface_sensitivity_analysis.py
(+322 files in other folders)
