[tool.poetry]
name = "FAST-PEDAGO"
version = "1.0.1"
readme = "README.md"
description = ""
authors = [
    "Ousmane SY <Ousmane.SY@isae-supaero.fr>",
    "Eric MONTSERRAT ROBLES <Eric.MONTSERRAT-ROBLES@student.isae-supaero.fr>",
    "Florent LUTZ <Florent.LUTZ2@isae-supaero.fr>",
    "Marien GIORDANI <Marien.GIORDANI@isae-supaero.fr>",
]
exclude = ["**/tests/**"]

homepage = "https://github.com/supaero-aircraft-design/FAST-PEDAGO"
keywords = [
    "aircraft",
    "design",
    "multi-disciplinary",
    "teaching",
    "educational"
]
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics"
]

[tool.poetry.dependencies]
# IMPORTANT: when modifying this list, docs/requirements.txt must be updated for
# ReadTheDocs to be able to compile the documentation.
# A pre-commit hook has been added to do this task. As a result, any modification
# of poetry.lock file will modify docs/requirements.txt and make
# the commit fail because "files were modified by this hook". In that case,
# doing again the commit including changes in docs/requirements.txt will succeed.
python = ">=3.8, <3.11"
fast-oad-cs25 = ">=0.6.0"
fast-oad-core = ">=1.7.3"
ipywidgets = "7.7.2"
ipyvuetify = "1.9.4"
appmode = "0.9.0"
voila = "0.3.7"
click = "8.0.3"
lxml_html_clean = "*"

[tool.poetry.group.dev.dependencies]
wheel = "*"
tabula = "*"

[tool.poetry.group.test.dependencies]
pytest = "^5.2"
pytest-cov = "*"
nbval = "*"

[tool.poetry.group.doc.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-bibtex = "*"

[tool.poetry.group.lint.dependencies]
pre-commit = "*"
black = { version = "21.9b0", extras = ["jupyter"], allow-prereleases = true } # if version is changed, please change it also in .pre-commit-config.yaml file.
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
    fast-pedago = "fast_pedago.app:main"